--- a/.settings/org.eclipse.jdt.apt.core.prefs
+++ b/.settings/org.eclipse.jdt.apt.core.prefs
@@ -1,5 +1,6 @@
-#Sat Nov 26 23:29:42 EST 2011
+#Tue Nov 22 11:50:27 EST 2011
 eclipse.preferences.version=1
-org.eclipse.jdt.apt.aptEnabled=false
+org.eclipse.jdt.apt.aptEnabled=true
 org.eclipse.jdt.apt.genSrcDir=.apt_generated
-org.eclipse.jdt.apt.reconcileEnabled=false
+org.eclipse.jdt.apt.processorOptions/queryMode=PROPERTY
+org.eclipse.jdt.apt.reconcileEnabled=true
