--- a/.settings/org.eclipse.jdt.core.prefs
+++ b/.settings/org.eclipse.jdt.core.prefs
@@ -1,3 +1,3 @@
-#Sat Nov 26 23:29:42 EST 2011
+#Fri Oct 28 12:40:17 EDT 2011
 eclipse.preferences.version=1
-org.eclipse.jdt.core.compiler.processAnnotations=disabled
+org.eclipse.jdt.core.compiler.processAnnotations=enabled
