--- a/.settings/org.eclipse.jdt.apt.core.prefs
+++ b/.settings/org.eclipse.jdt.apt.core.prefs
@@ -1,6 +1,6 @@
-#Tue Nov 22 11:50:27 EST 2011
+#Mon Nov 21 18:24:54 EST 2011
 eclipse.preferences.version=1
 org.eclipse.jdt.apt.aptEnabled=true
-org.eclipse.jdt.apt.genSrcDir=.apt_generated
+org.eclipse.jdt.apt.genSrcDir=src/main/java
 org.eclipse.jdt.apt.processorOptions/queryMode=PROPERTY
 org.eclipse.jdt.apt.reconcileEnabled=true
