made all models detachable, cleaned up site code

--- a/src/main/resources/props/datastore.props
+++ b/src/main/resources/props/datastore.props
@@ -2,3 +2,4 @@ datanucleus.ConnectionDriverName=org.h2.Driver
 datanucleus.ConnectionURL=jdbc:h2:data
 
 datanucleus.autoCreateSchema=true
+datanucleus.DetachAllOnCommit=true
